tests/ui/unboxed-closures/unboxed-closure-sugar-wrong-number-number-type-parameters-1.rs
#![feature(unboxed_closures)]

trait One<A> { fn foo(&self) -> A; }

fn foo(_: &dyn One()) //~ ERROR associated type `Output` not found for `One`
{}

fn main() { }
